--- a/src/main/webapp/imc.html
+++ b/src/main/webapp/imc.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<meta charset="UTF-8">
+<title>IMC</title>
 </head>
 <body>
-
+<div>
+<br></br>
+<h1>IMC</h1>
+<br></br>
+</div>
+<p>Preencha os campos abaixo para calcular seu Índice de Massa Corporal</p>
+<br></br>
+<p>Peso:</p><input id="peso" type="text" placeholder="Peso">
+<br></br>
+<p>Altura:</p><input id="altura" type="text" placeholder="Altura">
+<br></br>
+<p>Sexo:</p>
+<select>
+<option value="fem">Feminino</option>
+<option value="mas">Masculino</option>
+</select>
+<br></br>
+<button>Enviar</button>
 </body>
 </html>
