--- a/src/main/webapp/imc.html
+++ b/src/main/webapp/imc.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <meta charset="UTF-8">
 <title>IMC</title>
+<!--  Modelo css -->
+<link rel="stylesheet" type="text/css" href="modelo.css" />
 </head>
 <body>
 <div>
@@ -10,6 +16,7 @@
 <h1>IMC</h1>
 <br></br>
 </div>
+<!-- Campos a serem preenchidos para o cálculo -->
 <p>Preencha os campos abaixo para calcular seu Índice de Massa Corporal</p>
 <br></br>
 <p>Peso:</p><input id="peso" type="text" placeholder="Peso">
@@ -18,11 +25,14 @@
 <br></br>
 <p>Sexo:</p>
 <select>
-<option value="fem">Feminino</option>
-<option value="mas">Masculino</option>
+<option></option>
+<option>Feminino</option>
+<option>Masculino</option>
 </select>
 <br></br>
-<button>Enviar</button>
+<!-- Calcula o IMC -->
+<button onclick="myFunction()">Enviar</button>
+<script src="calculo.js" type="text/javascript"></script>
 <br></br>
 <hr>
 </body>
