Adição de comentários
comentários

--- a/src/main/webapp/imc.html
+++ b/src/main/webapp/imc.html
@@ -30,8 +30,9 @@
 <option>Masculino</option>
 </select>
 <br></br>
-<!-- Calcula o IMC -->
+<!-- Calcula o IMC pela função do js-->
 <button onclick="myFunction()">Enviar</button>
+<!-- Referencia calculo.js -->
 <script src="calculo.js" type="text/javascript"></script>
 <br></br>
 <hr>
