--- a/src/main/webapp/imc.html
+++ b/src/main/webapp/imc.html
@@ -15,7 +15,6 @@
 
 <body>
 
-
 <br><br>
 <h1>IMC</h1>
 <br><br>
@@ -23,6 +22,7 @@
 <hr> 
 </div>
 <br></br>
+<!-- Recebe dados -->
 <p>Preencha os dados abaixo para calcular seu Índice de Massa Corporal:</p>
 
 <br></br>
@@ -40,8 +40,7 @@
 </select>
 <br></br><br></br>
 <button onclick="myFunction()" >Enviar</button>
-
-
+<!-- Referencia JS -->
 <script src="calculo.js" type="text/javascript"></script>
 
 <hr>
